test/libsolidity/syntaxTests/operators/userDefined/implementing_operator_with_builtin_abi_encode.sol
type Int is int16;

using {abi.encode as +} for Int global;

function f(Int, Int) pure returns (Int) {}

// ----
// DeclarationError 9589: (27-37): Identifier is not a function name or not unique.
